GNOME Bugzilla – Bug 643891
24h setting shouldn't require unlock
Last modified: 2011-03-11 13:17:11 UTC
It's a preference, not a system setting.
commit 639e87724e7d991660c2a06617e2ba0ba4ed8ef3 Author: Bastien Nocera <hadess@hadess.net> Date: Fri Mar 11 13:16:03 2011 +0000 datetime: Make 24h setting changeable without unlocking https://bugzilla.gnome.org/show_bug.cgi?id=643891