datetime: Make 24h setting changeable without unlocking

https://bugzilla.gnome.org/show_bug.cgi?id=643891